[project]
name = "seo-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "google-adk>=0.5.0",
    "litellm>=1.70.0",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
